# zotero2ai

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  plan.md  pyproject.toml  test_collections_hierarchy.py  verify_memory.py  verify_phase2.py  verify_phase3.py  verify_phase5.py
.agent/: knowledge.md
.agent/workflows/: daily_memory_maintenance.md  general.md  weekly_project_rollup.md  zotero_autosave_rule.md
configs/: antigravity_mcp.json
deploy/mobile_sync/: docker-compose.yml
deploy/mobile_sync/openwebui_tools/: custom_tool_memory.py  custom_tool_search.py
deploy/nas/: docker-compose.yml
deploy/nas/openwebui_tools/: custom_tool_search.py
docs/: ARCHITECTURE.md  CHATGPT_DESKTOP_INTEGRATION.md  CONTRIBUTING.md  KNOWLEDGE_BASE.md  MANUAL_TESTING_GUIDE.md  QUICKSTART_CHATGPT.md  chatgpt-desktop-config.json  testing-notes-crud.md  wave4-implementation-summary.md
docs/architecture/c4/: 01-system-context.puml  02-container-diagram.puml  03-component-diagram.puml  04-dev-workflow.puml
docs/plans/: 2024-12-30-notes-crud-implementation-plan.md  2024-12-30-notes-crud-with-zotero-plugin-design.md  2025-12-29-wp-c-logging.md  2025-12-29-wp-e-makefile.md  BEFORE_AFTER_COMPARISON.md  GITHUB_ISSUES.md  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENTS_SUMMARY.md  README.md  REGRESSION_FIX.md  REGRESSION_FIX_SUMMARY.md  WAVE2_SUMMARY.md  agentic-workflow-improvements.md  agentic-workflow-plan.md  crud-implemenation-task plan and notes.md  fix_500_error_digital_thread.md  zotero_2_ai_implementation_plan .md
docs/plans/old plans/: 2025-12-29-wp-a-packaging.md  2025-12-29-wp-b-config.md  2025-12-29-wp-d-cli.md  2025-12-29-wp-f-integration.md
plugin/: build.sh  zotero-mcp-bridge.xpi
plugin/zotero-mcp-bridge/: README.md  TESTING_NOTE_DETAIL.md  TESTING_TASK_2.2.md  TESTING_WAVE2.md  TESTING_WAVE3.md  bootstrap.js  install.rdf  manifest.json  test_http_auth.sh  test_items_endpoints.sh  test_note_detail_endpoint.sh  test_query_params.sh  test_wave4.sh  zotero-mcp-bridge.xpi
scripts/: setup-chatgpt-desktop.sh
scripts/verify/: README.md  collections_hierarchy.py  e2e_smoke.py  verify_phase2.py
src/zotero2ai/: __init__.py  cli.py  config.py  logging.py
tests/: test_cli.py  test_config.py  test_contract.py  test_e2e_smoke.py  test_integration.py  test_logging.py  test_mcp_tools.py  test_plugin_client.py  test_zotero_db.py
(+30 files in other folders)
