[project]
name = "zotero2ai"
version = "0.1.0"
description = "MCP server for Zotero integration with local vector search"
authors = [
    { name = "Georg Hildebrand" }
]
dependencies = [
    "platformdirs>=4.0.0",
    "mcp[cli]>=1.0.0",
    "pyzotero>=1.5.0",
]
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
mcp-zotero2ai = "zotero2ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero2ai"]

[tool.ruff]
line-length = 180
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "PTH"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
